--- a/.env
+++ b/.env
@@ -1,3 +1,26 @@
-THEME=https://raw.githubusercontent.com/seanwcom/Red-Graphite-for-Obsidian/HEAD/theme.css
-BASE_THEME=dark
+SITE_NAME_HEADER=Narrative AV Lab
+SITE_MAIN_LANGUAGE=en
+SITE_BASE_URL=https://lab.narrativeav.com
+SHOW_CREATED_TIMESTAMP=false
+TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_UPDATED_TIMESTAMP=false
+NOTE_ICON_DEFAULT=
+NOTE_ICON_TITLE=false
+NOTE_ICON_FILETREE=false
+NOTE_ICON_INTERNAL_LINKS=false
+NOTE_ICON_BACK_LINKS=false
+STYLE_SETTINGS_CSS=body.css-settings-manager { --22d2-8f43-background-color: #1A7DA4; --77d3-def7-background-color: #1A7DA4; --77d3-def7-color: #C3F1BD; --77d3-def7-before: '✅ '; --22d2-8f43-before: '🐤 '; --22d2-8f43-color: #FCF6C0; --radius-modifier: 1.5; --nav-indentation-guide-width: 1pxpx; --font-text-override: Inter; --indentation-guide-width: 1pxpx; --h1-size: 1.8em; --h1-weight: 750; --h2-size: 1.4em; --h3-size: 1.6em; --h4-size: 1.3em; --h5-size: 1.3em; --h6-size: 1.2; --blockquote-border-thickness: 5px; --tag-radius: 16px; --tag-border-width: 1px; --checkbox-radius: 100px; --link-decoration: none; --h1-font: Source Serif Pro; --h4-weight: 450; --h3-font: Source Serif Pro; --h5-font: Source Serif Pro; --h3-weight: 800; --h5-weight: 750; --h2-weight: 500; --h6-transform: normal; --h6-weight: 550; --067e-1914-before: '⚗️ '; --2bb7-974f-before: '〰️ '; --1d80-ff0f-before: '💤 '; } body.theme-light.css-settings-manager { --h1-color: #E16863; --h2-color: #FF8B8B; --h3-color: #F69D48; --h5-color: #90D47F; --blockquote-border-color: #F6C177; --color-red-rgb: 205,72,72; --color-orange-rgb: 242,178,42; --color-yellow-rgb: 255,245,49; --color-green-rgb: 88,175,41; --color-cyan-rgb: 59,238,205; --color-blue-rgb: 27,113,235; --color-purple-rgb: 187,85,238; --color-pink-rgb: 255,35,201; --italic-color: #32946E; --bold-color: #A8524D; --text-highlight: #F1F52A; --link-color: #4192FF; --link-color-hover: #95BEFF; --link-external-color: #C688FF; --link-external-color-hover: #CBACFA; --background-primary: #FFF7ED; --h6-color: #82CE70; --h4-color: #FFAB64; --hr-color: #FF6D3E; } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-macos obsidian-app theme-light show-inline-title is-floating-nav auto-full-screen show-view-header zoom-plugin-bls-zoom css-settings-manager StilleUnfocusTitle iconic-clickable-icons iconic-markdown-tab-icons AT-row pdf-plus-click-embed-to-open-link pdf-plus-backlink-selection-highlight hide-pdf-embed-toolbar hide-pdf-toolbar-in-hover-editor accented-interface color-scheme-accent rose-pine-light contrast-light melange-dark contrast-dark layout-baseline input-baseline status-bar-baseline tab-default tab-stack-top view-header-title-hover tab-top-left-stacked tab-left-compact tab-top-right-icon tab-right-compact nav-action-dot hide-vault-switcher-off nav-item-baseline colorful-folders-subtle focus-view active-line-side active-line-color-default table-normal bases-normal img-normal metadata-default colorful-headings-off colorful-headings-text h1-l h3-l blockquote-edge callouts-default code-default code-line-numbers embed-block pdf-seamless table-width-full row-lines col-lines c-22d2-8f43-use-background c-77d3-def7-use-background is-focused
+USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/aaaaalexis/obsidian-baseline/HEAD/theme.css
+BASE_THEME=light
 dgHomeLink=true
+dgPassFrontmatter=false
+dgShowBacklinks=false
+dgShowLocalGraph=false
+dgShowInlineTitle=false
+dgShowFileTree=false
+dgEnableSearch=false
+dgShowToc=false
+dgLinkPreview=false
+dgShowTags=false
