--- a/.env
+++ b/.env
@@ -16,11 +16,11 @@ THEME=https://raw.githubusercontent.com/aaaaalexis/obsidian-baseline/HEAD/theme.
 BASE_THEME=light
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
-dgShowLocalGraph=false
-dgShowInlineTitle=false
-dgShowFileTree=false
-dgEnableSearch=false
-dgShowToc=false
-dgLinkPreview=false
-dgShowTags=false
+dgShowBacklinks=true
+dgShowLocalGraph=true
+dgShowInlineTitle=true
+dgShowFileTree=true
+dgEnableSearch=true
+dgShowToc=true
+dgLinkPreview=true
+dgShowTags=true
