--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Narrative AV Lab
+SITE_NAME_HEADER=NARRATIVE AV LAB
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://lab.narrativeav.com
 SHOW_CREATED_TIMESTAMP=true
